Remove side scrollbar CSS and fix home image sizing

--- a/src/main.css
+++ b/src/main.css
@@ -1,13 +1,13 @@
-::-webkit-scrollbar{
+.image-gallery-thumbnails::-webkit-scrollbar{
     width: 10px;
     height: 8px;
 }
 
-::-webkit-scrollbar-track-piece{
+.image-gallery-thumbnails::-webkit-scrollbar-track-piece{
     background-color: transparent;
 }
 
-::-webkit-scrollbar-thumb{
+.image-gallery-thumbnails::-webkit-scrollbar-thumb{
     background-color: #CBCBCB;
     /*outline: 2px solid #FFF;*/
     outline-offset: -2px;
@@ -15,7 +15,7 @@
     border-radius: 20px;
 }
 
-::-webkit-scrollbar-thumb:hover{
+.image-gallery-thumbnails::-webkit-scrollbar-thumb:hover{
     background-color: #909090;
 }
 
@@ -35,6 +35,20 @@
     /*margin-right: 10em;*/
     position: relative;
     /*offset-before: -3em;*/
+}
+
+@media screen and (max-width: 736px) {
+    .home-image {
+        width: calc(100% + 3em);
+        height: 300px;
+        object-fit: cover;
+        margin-left: -1.5em;
+        margin-right: -1.5em;
+        margin-top: -1.5em;
+        /*margin-right: 10em;*/
+        position: relative;
+        /*offset-before: -3em;*/
+    }
 }
 
 .ride-star {
